# Lisa-dbg

./: .gitignore  Cargo.toml  README.md  lisa_dbg.rar
src/: cli.rs  main.rs  process.rs  ste.rs  usage.rs
src/command/: attach.rs  breakpoint.rs  file.rs  hook.rs  info.rs  mod.rs  proc_addr.rs  remover.rs  reset.rs  set.rs  skip.rs  stret.rs  sym.rs  watchpoint.rs
src/command/def/: func.rs  mod.rs  structs.rs  types.rs
src/command/def/variable/: mod.rs  printf.rs  variable.rs
src/dbg/: attach.rs  exec.rs  handle_point.rs  mod.rs
src/dbg/dbg_cmd/: disasm.rs  mod.rs  usages.rs
src/dbg/dbg_cmd/x32/: deref_mem32.rs  info_reg.rs  mod.rs
src/dbg/dbg_cmd/x32/modifier32/: register.rs
src/dbg/dbg_cmd/x64/: info_reg.rs  mod.rs
src/dbg/dbg_cmd/x64/modifier/: register.rs
src/dbg/memory/: breakpoint.rs  deref_mem.rs  finder.rs  func.rs  mem_info.rs  mod.rs  stack.rs  watchpoint.rs
src/dbg/memory/set/: mod.rs  set_memory.rs  set_protect.rs  thread.rs
src/dllib/: mod.rs
src/pefile/: export.rs  function.rs  mod.rs  section.rs
src/symbol/: dwarf.rs  mod.rs  pdb.rs
src/ut/: cast.rs  fmt.rs  mem.rs  mod.rs
symbol_pe/: CMakeLists.txt  CMakePresets.json
symbol_pe/src/: callback.cpp  callback.hpp  export.cpp  export.h  free.cpp  symbol.cpp  symbol.h
