[package]
name = "LisaDbg"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = "0.3.26"
gimli = "0.31.1"
regex = "1.11.1"
num = "0.4.3"
iced-x86 = "1.21.0"
anyhow = "1.0.93"
ntapi = "0.4.1"
keystone-engine = "0.1.0"
once_cell = "1.20.2"
winapi = { version = "0.3.9", features = ["memoryapi", "winnt", "processthreadsapi", "tlhelp32", "handleapi", "debugapi", "ntdef", "dbghelp", "libloaderapi", "fileapi", "psapi"] }